hphp/hack/test/typecheck/nested_shapes_idx.php.exp
File "nested_shapes_idx.php", line 8, characters 5-33:
Invalid argument (Typing[4323])
File "Shapes.hhi", line 35, characters 35-44:
Some type constraint(s) are violated here
File "Shapes.hhi", line 35, characters 30-30:
T is a constrained type parameter
File "Shapes.hhi", line 35, characters 35-44:
Expected shape(...)
File "nested_shapes_idx.php", line 4, characters 28-45:
But got null
